--- a/tqsRecurso/src/main/webapp/task/interface.xhtml
+++ b/tqsRecurso/src/main/webapp/task/interface.xhtml
@@ -16,11 +16,13 @@
         <p:growl id="growl" life="3000" />
 
         <p:layout fullPage="true">
-            <p:layoutUnit position="north" size="65" header="#{bundle.AppName}">
+            <p:layoutUnit position="north" size="65" header="Gonçalo - Recurso">
                 <h:form id="menuForm">
                     <p:menubar>
-                        <p:menuitem value="#{bundle.Home}" outcome="/index" icon="ui-icon-home"/>
-                        <p:menuitem value="Task" outcome="/task/List.xhtml" />
+                        <p:menuitem value="Note Keeper" outcome="tqs" icon="ui-icon-close"/>
+                        <p:menuitem value="Profile Management" outcome="EditAccount" icon="ui-icon-close"/>
+                        <p:menuitem value="About Us" outcome="Aboutus" icon="ui-icon-close"/>
+                        <p:menuitem value="Logout" outcome="login" icon="ui-icon-close"/>
                     </p:menubar>
                 </h:form>
             </p:layoutUnit>
