--- a/tqsRecurso/src/main/webapp/task/tqs.xhtml
+++ b/tqsRecurso/src/main/webapp/task/tqs.xhtml
@@ -75,9 +75,9 @@
                 </p:panel>
             </h:form>
 
-            <ui:include src="Create.xhtml"/>
-            <ui:include src="Edit.xhtml"/>
-            <ui:include src="View.xhtml"/>
+            <ui:include src="NewTask.xhtml"/>
+            <ui:include src="ChangeTask.xhtml"/>
+            <ui:include src="Info.xhtml"/>
         </ui:define>
     </ui:composition>
 
