--- a/tqsRecurso/src/main/webapp/task/interface.xhtml
+++ b/tqsRecurso/src/main/webapp/task/interface.xhtml
@@ -21,7 +21,7 @@
                     <p:menubar>
                         <p:menuitem value="Note Keeper" outcome="tqs" icon="ui-icon-close"/>
                         <p:menuitem value="Profile Management" outcome="EditAccount" icon="ui-icon-close"/>
-                        <p:menuitem value="About Us" outcome="Aboutus" icon="ui-icon-close"/>
+                        <p:menuitem value="About Me" outcome="AboutMe" icon="ui-icon-close"/>
                         <p:menuitem value="Logout" outcome="login" icon="ui-icon-close"/>
                     </p:menubar>
                 </h:form>
